[스타일링] components css 확장

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,7 +1,9 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
-
+/* 기본 스타일 모듈 */
+@import "tailwindcss/base";
+/* 컴포넌트 스타일 모듈 */
+@import "tailwindcss/components";
+/* 유틸리티 스타일 모듈 */
+@import "tailwindcss/utilities";
 :root {
   --background: #ffffff;
   --foreground: #171717;
@@ -18,4 +20,10 @@ body {
   color: var(--foreground);
   background: var(--background);
   font-family: Arial, Helvetica, sans-serif;
+}
+
+@layer components {
+  .main {
+    height: calc(100vh - 119.41px);
+  }
 }
